# BinoAgent

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
data/: agent.db
src/twitter_agent/: __init__.py  agent.py  cli.py  db.py  info_extract.py  info_scraping.py  memory.py
src/twitter_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
