[project]
name = "twitter-agent"
version = "0.1.0"
description = "CLI agent for drafting and posting tweets with OpenAI and persistent memory."
authors = [{name = "Bin0-D3v"}]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pyperclip>=1.8.2",
    "playwright>=1.41.0",
]

[project.scripts]
twitter-agent = "twitter_agent.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
